--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,45 +5,45 @@
     }
 
     &__cata-classic {
-        background-image: url(/media/background/cata-classic.avif);
+        background-image: url(../media/background/cata-classic.avif);
     }
     &__dragonflight-update {
-        background-image: url(/media/background/df-update.avif);
+        background-image: url(../media/background/df-update.avif);
     }
     &__blizzcon-sale {
-        background-image: url(/media/background/blizzcon.avif);
+        background-image: url(../media/background/blizzcon.avif);
     }
     &__classic-hc {
-        background-image: url(/media/background/hardcore.avif);
+        background-image: url(../media/background/hardcore.avif);
     }
     &__trading-post {
-        background-image: url(/media/background/tradingpost.avif);
+        background-image: url(../media/background/tradingpost.avif);
     }
     &__prime-gaming {
-        background-image: url(/media/background/primegaming.avif);
+        background-image: url(../media/background/primegaming.avif);
     }
     &__12month-promo {
-        background-image: url(/media/background/promo.avif);
+        background-image: url(../media/background/promo.avif);
     }
     &__wotlk-classic {
-        background-image: url(/media/background/wotlk.avif);
+        background-image: url(../media/background/wotlk.avif);
     }
     &__warcraft-rumble {
-        background-image: url(/media/background/rumble.avif);
+        background-image: url(../media/background/rumble.avif);
     }
     &__raf {
-        background-image: url(/media/background/raf.avif);
+        background-image: url(../media/background/raf.avif);
     }
     &__df-wait {
-        background-image: url(/media/background/dfwait.avif);
+        background-image: url(../media/background/dfwait.avif);
     }
     &__socials {
-        background-image: url(/media/background/socialsBG.jpg);
+        background-image: url(../media/background/socialsBG.jpg);
         background-position: top;
         background-size: cover;
     }
     &__footer {
-        background-image: url(/media/background/footerBG.jpg);
+        background-image: url(../media/background/footerBG.jpg);
     }
 }
 
